# arbuzi_mss_rbw

./: .gitignore  README.md
docs/form/: form_answers.docx  form_answers.md
ros2/docker/: frob.dockerfile.save  robot-compose.yaml  user-compose.yaml
ros2/src/arduino2/arduino_code/: arduino_code.ino  motor_regulator.h  robot_params.h  ros2_communication.hpp
ros2/src/ros2_ws/src/frob_navigation/maps/: map.pgm  map.yaml
ros2/src/ros2_ws/src/misis_rbw_autonomy/: package.xml  setup.cfg  setup.py
ros2/src/ros2_ws/src/misis_rbw_autonomy/config/: rbw_strategy.yaml
ros2/src/ros2_ws/src/misis_rbw_autonomy/launch/: rbw_autonomy.launch.py
ros2/src/ros2_ws/src/misis_rbw_autonomy/misis_rbw_autonomy/: __init__.py  autonomy_node.py  field_detector.py  strategy.py
ros2/src/ros2_ws/src/misis_rbw_autonomy/resource/: misis_rbw_autonomy
tools/: unified_detector.py
